# image_segmenter

./: README.md  annotater.py  image_segmenter.py  pyproject.toml  requirements.txt  segmenter.py  setup.py  voc_writer.py
image_segmenter/: __init__.py  image_segmenter.py  voc_writer.py
